--- a/config/catkin/01-custom-aliases.yaml
+++ b/config/catkin/01-custom-aliases.yaml
@@ -1,13 +1,13 @@
-b: build --no-status
-bh: build --no-status --start-with-this
-bd: build --no-status --cmake-args -DCMAKE_BUILD_TYPE=Debug
-br: build --no-status --cmake-args -DCMAKE_BUILD_TYPE=Release
-brwdi: build --no-status --cmake-args -DCMAKE_BUILD_TYPE=relwithdebinfo
-bo: build --no-status --no-deps
-bw: build --no-status -v --cmake-args -DCMAKE_C_FLAGS="-Wall -g -W -Wno-unused-parameter"
-bot: build --no-status --no-deps --this
-botw: build --no-status --no-deps --this -v --cmake-args -DCMAKE_C_FLAGS="-Wall -g -W -Wno-unused-parameter"
-botd: build --no-status --no-deps --this --cmake-args -DCMAKE_BUILD_TYPE=Debug
-botr: build --no-status --no-deps --this --cmake-args -DCMAKE_BUILD_TYPE=Release
+b: build
+bh: build --start-with-this
+bd: build --cmake-args -DCMAKE_BUILD_TYPE=Debug
+br: build --cmake-args -DCMAKE_BUILD_TYPE=Release
+brwdi: build --cmake-args -DCMAKE_BUILD_TYPE=relwithdebinfo
+bo: build --no-deps
+bw: build -v --cmake-args -DCMAKE_C_FLAGS="-Wall -g -W -Wno-unused-parameter"
+bot: build --no-deps --this
+botw: build --no-deps --this -v --cmake-args -DCMAKE_C_FLAGS="-Wall -g -W -Wno-unused-parameter"
+botd: build --no-deps --this --cmake-args -DCMAKE_BUILD_TYPE=Debug
+botr: build --no-deps --this --cmake-args -DCMAKE_BUILD_TYPE=Release
 tot: run_tests --no-deps --this
 roslint: build -iv --make-args roslint --
